# csp

./: CMakeLists.txt  FutoshikiReader.c  FutoshikiReader.h  README.md  main.c
Algorithms/: Cached.c  Cached.h  Common.c  Common.h  Configs.c  Configs.h  EPPreprocess.c  EPPreprocess.h  Uncached.c  Uncached.h
CSP/: CSP.c  CSP.h  CSPConstraint.c  CSPDomain.c  CSPVar.c
Constraints/: Constraints.c  Constraints.h
